Fix lockfile-check workflow by simplifying validation

--- a/.github/workflows/lockfile-check.yml
+++ b/.github/workflows/lockfile-check.yml
@@ -21,14 +21,7 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install dependencies using lockfile
-        run: npm ci
-
-      - name: Ensure lockfile in sync with package.json
+      - name: Verify lockfile is in sync
         run: |
-          npm install --package-lock-only
-          # If installing updates the lockfile, diff will show changes and cause the job to fail.
-          git diff --exit-code -- package-lock.json || (echo "package-lock.json is out-of-date — run 'npm install' and commit the updated lockfile" && exit 1)
-
-      - name: Double-check with npm ci
-        run: npm ci
+          # This will fail if package-lock.json is out of sync with package.json
+          npm ci
