--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase-tools": "^13.31.0",
     "isomorphic-dompurify": "^2.21.0",
     "marked": "^15.0.7",
+    "tone": "^15.1.3",
     "vanilla-cookieconsent": "^3.1.0",
     "workbox-window": "^7.3.0"
   }
