React player included

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/node": "^9.1.0",
     "@playform/compress": "^0.1.7",
     "@playform/inline": "^0.1.1",
+    "@soundtouchjs/audio-worklet": "^0.2.1",
     "@spotlightjs/astro": "^2.4.3",
     "@vite-pwa/assets-generator": "^0.2.6",
     "@vite-pwa/astro": "^0.5.0",
@@ -23,6 +24,7 @@
     "astro-seo": "^0.8.4",
     "firebase": "^11.3.1",
     "firebase-tools": "^13.31.0",
+    "id3js": "^2.1.1",
     "isomorphic-dompurify": "^2.21.0",
     "marked": "^15.0.7",
     "tone": "^15.1.3",
